--- a/plain/html/index.html
+++ b/plain/html/index.html
@@ -2,13 +2,14 @@
 <html lang='en-US'>
 <head>
   <meta charset='utf-8'>
-  <title>Text Game</title>
+  <title>Alex Bonine Default Setup</title>
   <meta name='author' content='Alex Bonine'>
   <meta name='viewport' content='width=device-width,initial-scale=1'>
-  <link rel='stylesheet' type='text/css' href='style/style.css'>
-  <link rel="shortcut icon" type="image/x-icon" href="http://www.alexbonine.com/images/favicon.ico">
+  <link rel='stylesheet' type='text/css' href='css/style.css'>
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="http://www.alexbonine.com/images/favicon.ico"> -->
 </head>
 <body>
+  <h1 class='test'>Hello, world!</h1>
   <script type='text/javascript' src='js/bundle.js'></script>
 </body>
 </html>
